--- a/blog_app-fronted/src/index.css
+++ b/blog_app-fronted/src/index.css
@@ -7,4 +7,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
+.userProf::before {
+  content: "";
+  position: absolute;
+  top: -8%;
+  right: 4%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 15px solid  rgb(204, 204, 204);
+}
+
+
