--- a/blog_app-fronted/src/index.css
+++ b/blog_app-fronted/src/index.css
@@ -23,4 +23,34 @@
   border-bottom: 15px solid  rgb(204, 204, 204);
 }
 
+/* This css class for delete post toast custmization   */
+.toasti { 
+  color: white;
+  background-color:rgb(12, 195, 79);
+  border-left: 5px solid rgb(3, 141, 54); 
+  border-radius:0px; 
+  padding: 8px; 
+  width: 300px;
+  font-size: 18px;
+  border-top: 1px solid rgb(12, 195, 79); 
+  border-bottom: 1px solid rgb(12, 195, 79); 
+  border-right: 1px solid rgb(12, 195, 79); 
 
+
+}
+.Box-one{
+  box-shadow: 0px 2px 1px -1px rgba(58, 53, 65, 0.2),
+  0px 1px 1px 0px rgba(58, 53, 65, 0.14),
+  0px 1px 3px 0px rgba(58, 53, 65, 0.12);
+  transition:box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.custome-shadow{
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+
+/* ================================= Admin Css  ==================================== */
+
+.login-height{
+height: calc(100vh - 50px) ;
+}
